fixed hero spacing

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
 }
 
 #hero .button {
-    margin: 8rem 0 0 0;
+    margin: 5rem 0 0 0;
 }
 
 #next-button {
